[package]
name = "frad"
version = "0.0.0"
authors = ["HaמuL"]
license = "Archivist Licence"
edition = "2021"

[lib]
name = "frad"
path = "src/libfrad/lib.rs"

[[bin]]
name = "frad-rs"
path = "src/main.rs"

[dependencies]
base64 = "0.22.1"
flate2 = "1.0.34"
half = "2.4.1"
infer = "0.16.0"
rodio = "0.19.0"
rustfft = "6.2.0"
same-file = "1.0.6"
serde_json = "1.0.132"
tempfile = "3.13.0"
