[workspace]
members = [
    "src/libfrad",
    "."
]

[package]
name = "frad"
version = "0.0.0"
authors = ["HaמuL"]
license = "Archivist Licence"
edition = "2021"

[[bin]]
name = "frad-rs"
path = "src/main.rs"

[dependencies]
base64 = "0.22.1"
infer = "0.19.0"
libfrad = { path = "src/libfrad" }
rodio = "0.20.1"
same-file = "1.0.6"
serde_json = "1.0"
tempfile = "3.17.1"
